--- a/views/addproduct.ejs
+++ b/views/addproduct.ejs
@@ -26,19 +26,22 @@
        <form action="/addp" method="post" style="padding :60px">
      <div class="input-group">
        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-       <input id="name" type="text" class="form-control" name="name" maxlength="20" placeholder="Nom Product">
+       <input id="name" type="text" class="form-control" name="name" placeholder="Nom Product" required>
      </div>
      <div class="input-group">
        <span class="input-group-addon"><i class="glyphicon glyphicon-euro"></i></span>
        <input id="prix" type="number" class="form-control" name="price" placeholder="Price">
      </div>
+    
      <div class="input-group">
        <span class="input-group-addon"><i class="glyphicon glyphicon-camera"></i></span>
        <input id="img" type="text" class="form-control" name="image" placeholder="Image">
      </div>
+    
      <div class="input-group">
        <span class="input-group-addon"><i class="glyphicon glyphicon-barcode"></i></span>
        <input id="qnt" type="number" class="form-control" name="quantity" placeholder="Quantity">
+    
      </div><div class="input-group">
        <span class="input-group-addon"><i class="glyphicon glyphicon-tags"></i></span>
        <select class="form-control" id="sel1" name="category">
@@ -54,7 +57,12 @@
      </div>
      <div class="input-group">
        <span class="input-group-addon"><i class="glyphicon glyphicon-italic"></i></span>
-       <textarea class="form-control" rows="5" id="comment"name="desc" placeholder="Description .."></textarea></div>
+       <textarea class="form-control" rows="5" id="comment"name="desc" placeholder="Description .."></textarea>
+       </div>
+       <div class="input-group">
+       <span class="input-group-addon"><i class="glyphicon glyphicon-camera"></i></span>
+       <input id="ad" type="text" class="form-control" name="ad" placeholder="Advertisement banner  (1920x500)">
+     </div>
      <div class="form-group">
        <button class="btn btn-lg btn-primary btn-block">Ajouter Produit !</button>
      </div>
