--- a/views/displaygrid.ejs
+++ b/views/displaygrid.ejs
@@ -1,8 +1,8 @@
 <div class="row text-center">
-  <% for (var i = 0; i < prods.length; i++) {%>
+  <% if(prods.length!=0)for (var i = 0; i < prods.length; i++) {%>
 <div class="col-sm-3"  id="prodSelect">
   <div class="thumbnail theme" style="margin:0px ;">
-                <img  src="<%= prods[i].image%>" style=" max-height:200px ; min-height:200px ;object-fit: none" >  <% if(prods[i].quantity<=0){%>
+                <img  src="<%= prods[i].image%>" style=" max-height:200px ; min-height:200px ;object-fit: cover" >  <% if(prods[i].quantity<=0){%>
                     <span class="label label-warning" style="float:left">INDISPONNIBLE !</span><%}%><%if(Date.now()-prods[i].date<86400000){%><span class="label label-danger" style="float:left">New!</span><%}%>
 </img><hr style="margin-bottom:0px;width:inherit">
     <p style="margin-top: 1em;
