--- a/views/editproduct.ejs
+++ b/views/editproduct.ejs
@@ -25,7 +25,7 @@ border: 2px solid lightblue;
        <form action="/edit/<%=product._id%>" method="post" style="padding :60px">
      <div class="input-group">
        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-       <input id="name" type="text" class="form-control" name="name" value="<%=product.name%>" placeholder="Nom Product">
+       <input id="name" type="text" class="form-control" name="name" value="<%=product.name%>" placeholder="Nom Product" required>
      </div>
      <div class="input-group">
        <span class="input-group-addon"><i class="glyphicon glyphicon-euro"></i></span>
@@ -54,6 +54,10 @@ border: 2px solid lightblue;
      <div class="input-group">
        <span class="input-group-addon"><i class="glyphicon glyphicon-italic"></i></span>
        <textarea class="form-control" rows="7" id="comment"  name="desc" placeholder="Description .." ><%=product.description%></textarea></div>
+       <div class="input-group">
+       <span class="input-group-addon"><i class="glyphicon glyphicon-barcode"></i></span>
+       <input id="qnt" type="text" class="form-control" name="ad" value="<%=product.ad.src%>" placeholder="Advertisement banner">
+     </div>
      <div class="form-group">
        <button class="btn btn-lg btn-primary btn-block">Modifier Produit !</button>
      </div>
